--- a/sdk/client-core/client-core/pom.xml
+++ b/sdk/client-core/client-core/pom.xml
@@ -15,7 +15,7 @@
   <groupId>com.client</groupId>
   <artifactId>client-core</artifactId>
   <packaging>jar</packaging>
-  <version>1.44.0-beta.1</version> <!-- {x-version-update;com.client:client-core;current} -->
+  <version>1.43.0</version> <!-- {x-version-update;com.client:client-core;current} -->
 
   <name>Microsoft Client Java Core Library</name>
   <description>This package contains core types for Client Java clients.</description>
@@ -231,6 +231,7 @@
             <bannedDependencies>
               <includes>
                 <include>io.projectreactor:reactor-core:[3.4.31]</include> <!-- {x-include-update;io.projectreactor:reactor-core;external_dependency} -->
+                <include>com.client:client-json:[1.1.0]</include> <!-- {x-include-update;com.client:client-json;dependency} -->
                 <include>com.fasterxml.jackson.core:jackson-annotations:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.core:jackson-annotations;external_dependency} -->
                 <include>com.fasterxml.jackson.core:jackson-core:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.core:jackson-core;external_dependency} -->
                 <include>com.fasterxml.jackson.core:jackson-databind:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.core:jackson-databind;external_dependency} -->
