--- a/sdk/client-core/client-json/pom.xml
+++ b/sdk/client-core/client-json/pom.xml
@@ -15,7 +15,7 @@
   <groupId>com.client</groupId>
   <artifactId>client-json</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.0-beta.1</version> <!-- {x-version-update;com.client:client-json;current} -->
+  <version>1.1.0</version> <!-- {x-version-update;com.client:client-json;current} -->
 
   <name>Microsoft Client Java JSON Library</name>
   <description>This package provides interfaces for reading and writing JSON.</description>
