Eg sync stack testproxy (#36656)
* Add missing sync test cases

* Enable sync-stack

* Remove extra set of aeg-channel-name.

* enable AssertingHttpClient

* add back missing Context arguments

* Don't stop trying dev credentials on failures

Fixes #34733

For our dev time credentials we want to always keep going. This change wraps any failure from the credentials in a `CredentialUnavailableException` so `ChainedTokenCredential` will continue them properly. It only does so in the context of a `ChainedTokenCredential`. Regular uses of these credentials is unaffected.

* Tests now use test proxy and recordings are pushed to assets repo

* address pr comments

* fix merge conflicts

* add exports

* fix version

* remove unused imports

* use unreleased test version

* fix tag

* fix tag

* refactor

* fix spring test after sync stack migration

* log the test proxy response on error

* fix header sanitizer in Service Bus

* fix regex for quantum job tests

* Add missing sync test cases

* Enable sync-stack

* Remove extra set of aeg-channel-name.

* enable AssertingHttpClient

* add back missing Context arguments

* Tests now use test proxy and recordings are pushed to assets repo

* address pr comments

* add exports

* fix version

* use unreleased test version

* fix tag

* fix tag

* refactor

* fix spring test after sync stack migration

* log the test proxy response on error

* fix header sanitizer in Service Bus

* fix regex for quantum job tests

* Put a semaphore around starting the proxy.

* make the methods of `TestProxyManager` static and synchronized.

* Use the working directory to search for the root of the repo from.

* add missing sanitizer setup

* base class has this so it's not needed here

* removed this in merge accidentally

* pin azure-core version

---------

Co-authored-by: Srikanta Nagaraja <srnagar@microsoft.com>
Co-authored-by: Srikanta <51379715

--- a/sdk/eventgrid/azure-messaging-eventgrid/pom.xml
+++ b/sdk/eventgrid/azure-messaging-eventgrid/pom.xml
@@ -56,6 +56,8 @@
       --add-opens com.azure.messaging.eventgrid/com.azure.messaging.eventgrid.implementation=ALL-UNNAMED
 
       --add-reads com.azure.messaging.eventgrid=com.azure.core.serializer.json.jackson
+      --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
+      --add-exports com.azure.core/com.azure.core.implementation=ALL-UNNAMED
     </javaModulesSurefireArgLine>
   </properties>
 
