build pipeline changes

--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,7 @@
     <module>sdk/timeseriesinsights</module>
     <module>sdk/tools</module>
     <module>sdk/translation</module>
+    <module>sdk/typespec-core</module>
     <module>sdk/videoanalyzer</module>
     <module>sdk/vmwarecloudsimple</module>
     <module>sdk/voiceservices</module>
