--- a/sdk/servicebus/azure-messaging-servicebus-stress/scenarios-matrix.yaml
+++ b/sdk/servicebus/azure-messaging-servicebus-stress/scenarios-matrix.yaml
@@ -1,7 +1,32 @@
 matrix:
-  image:
-    - Dockerfile
   scenarios:
-    send-process:
-      chaos: "true"
+    composite:
+      testDurationMin: 15
+      processingConcurrency: 50
+      sendRate: 160
+      receiverTestClass: MessageProcessor
+      senderTestClass: MessageSenderAsync
+      abandonRatio: 0.002
+      noDispositionRatio: 0.001
+      lockRenewalNeededRatio: 0.01
+      processCallbackDurationMaxInMs: 10
+      autoRenewLock: "true"
+      prefetchCount: 0
+      lockDurationInMs: 5000
+      chaos: "false"
+      tryTimeout: 60
+      delayStartMin: 0
+      azureSdkLogLevel: 3
+      azureSdkTracingEnabled: true
+      applicationInsightsSamplingRate: 100
+      applicationInsightsLogLevel: "INFO"
+      imageBuildDir: ..\..\..\
+    happy-case:
+      testDurationMin: 15
+      processingConcurrency: 64
+      sendRate: 900
+      receiverTestClass: MessageProcessor
+      senderTestClass: MessageSenderAsync
+      lockDurationInMs: 5000
+      processCallbackDurationMaxInMs: 10
       imageBuildDir: ..\..\..\
