--- a/sdk/parents/azure-client-sdk-parent/pom.xml
+++ b/sdk/parents/azure-client-sdk-parent/pom.xml
@@ -1669,7 +1669,7 @@
           <plugin>
             <groupId>org.openrewrite.maven</groupId>
             <artifactId>rewrite-maven-plugin</artifactId>
-            <version>5.6.0</version> <!-- {x-version-update;org.openrewrite.maven:rewrite-maven-plugin;external_dependency} -->
+            <version>5.8.1</version> <!-- {x-version-update;org.openrewrite.maven:rewrite-maven-plugin;external_dependency} -->
             <configuration>
               <activeRecipes>
                 <recipe>com.typespec.core.gen</recipe>
@@ -1681,8 +1681,8 @@
             <dependencies>
               <dependency>
                 <groupId>com.azure</groupId>
-                <artifactId>typespec-core-gen</artifactId> <!-- {x-version-update;com.azure:client-core-gen;current} -->
-                <version>1.0.0</version>
+                <artifactId>typespec-core-gen</artifactId>
+                <version>1.0.0</version> <!-- {x-version-update;com.azure:typespec-core-gen;current} -->
               </dependency>
             </dependencies>
           </plugin>
