--- a/sdk/typespec-core/typespec-core-test/pom.xml
+++ b/sdk/typespec-core/typespec-core-test/pom.xml
@@ -13,7 +13,7 @@
   <groupId>com.typespec</groupId>
   <artifactId>typespec-core-test</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure:azure-core-test;current} -->
+  <version>1.0.0</version> <!-- {x-version-update;com.typespec:typespec-core-test;current} -->
 
   <name>Java Core Test Library</name>
   <description>This package contains core test types for Java clients.</description>
@@ -37,11 +37,11 @@
       --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
       --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
 
-      --add-reads com.azure.core.test=ALL-UNNAMED
-      --add-opens com.azure.core.test/com.azure.core.test.http=org.junit.platform.commons
-      --add-opens com.azure.core.test/com.azure.core.test.models=ALL-UNNAMED
-      --add-opens com.azure.core.test/com.azure.core.test.policy=org.junit.platform.commons
-      --add-opens com.azure.core.test/com.azure.core.test.implementation=org.junit.platform.commons
+      --add-reads com.typespec.core.test=ALL-UNNAMED
+      --add-opens com.typespec.core.test/com.typespec.core.test.http=org.junit.platform.commons
+      --add-opens com.typespec.core.test/com.typespec.core.test.models=ALL-UNNAMED
+      --add-opens com.typespec.core.test/com.typespec.core.test.policy=org.junit.platform.commons
+      --add-opens com.typespec.core.test/com.typespec.core.test.implementation=org.junit.platform.commons
     </javaModulesSurefireArgLine>
 
     <!-- This is not a module we want/expect external customers to consume. Skip breaking API checks. -->
@@ -50,12 +50,12 @@
     <!-- Enables fail on deprecated API usage. -->
     <compiler.failondeprecatedstatus/>
 
-     <javadoc.excludePackageNames>com.azure.json,com.azure.core.implementation*,com.azure.core.util,com.azure.core.util*,
-      com.azure.core.models,com.azure.core.http,com.azure.core.http.policy,com.azure.core.http.rest,com.azure.core.exception,com.azure.core.cryptography,
-      com.azure.core.credential,com.azure.core.client.traits,com.azure.core.annotation</javadoc.excludePackageNames>
+     <javadoc.excludePackageNames>com.typespec.json,com.typespec.core.implementation*,com.typespec.core.util,com.typespec.core.util*,
+      com.typespec.core.models,com.typespec.core.http,com.typespec.core.http.policy,com.typespec.core.http.rest,com.typespec.core.exception,com.typespec.core.cryptography,
+      com.typespec.core.credential,com.typespec.core.client.traits,com.typespec.core.annotation</javadoc.excludePackageNames>
     <surefireXmx>4g</surefireXmx>
 
-    <!-- skipping test coverage requirements for azure-core-test as this is a utility library for testing -->
+    <!-- skipping test coverage requirements for typespec-core-test as this is a utility library for testing -->
     <jacoco.skip>true</jacoco.skip>
 
   </properties>
@@ -64,7 +64,7 @@
     <dependency>
       <groupId>com.typespec</groupId>
       <artifactId>typespec-core</artifactId>
-      <version>1.0.0</version> <!-- {x-version-update;com.azure:azure-core;current} -->
+      <version>1.0.0</version> <!-- {x-version-update;com.typespec:typespec-core;current} -->
     </dependency>
 
     <dependency>
@@ -128,7 +128,7 @@
 
   <build>
     <plugins>
-      <!-- RestProxyTests is inherited by tests in azure-core-http-netty -->
+      <!-- RestProxyTests is inherited by tests in typespec-core-http-netty -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -154,8 +154,9 @@
               <includes>
                 <include>io.projectreactor:reactor-test:[3.4.31]</include> <!-- {x-include-update;io.projectreactor:reactor-test;external_dependency} -->
                 <include>com.fasterxml.jackson.dataformat:jackson-dataformat-xml:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.dataformat:jackson-dataformat-xml;external_dependency} -->
+                <include>com.typespec:typespec-core:[1.0.0]</include> <!-- {x-include-update;com.typespec:typespec-core;current} -->
                 <include>io.projectreactor.netty:reactor-netty-http:[1.0.34]</include> <!-- {x-include-update;io.projectreactor.netty:reactor-netty-http;external_dependency} -->
-                <!-- special allowance for azure-core-test as it is not a shipping library: -->
+                <!-- special allowance for typespec-core-test as it is not a shipping library: -->
                 <include>org.junit.jupiter:junit-jupiter-api:[5.9.3]</include> <!-- {x-include-update;org.junit.jupiter:junit-jupiter-api;external_dependency} -->
                 <include>org.junit.jupiter:junit-jupiter-params:[5.9.3]</include> <!-- {x-include-update;org.junit.jupiter:junit-jupiter-params;external_dependency} -->
                 <include>org.apache.commons:commons-compress:[1.22]</include> <!-- {x-include-update;org.apache.commons:commons-compress;external_dependency} -->
