Updated version_client.txt and pom_file_version_scanner.ps1. Also added typespec-core-test to the whitelist in the azure-client-parent-pom

--- a/sdk/parents/azure-client-sdk-parent/pom.xml
+++ b/sdk/parents/azure-client-sdk-parent/pom.xml
@@ -1353,6 +1353,7 @@
                     <param>com.azure:azure-e2e</param>
                     <param>com.azure:azure-storage-perf</param>
                     <param>com.azure:perf-test-core</param>
+                    <param>com.typespec:typespec-core-test</param>
                   </ignoredGA>
                 </configuration>
               </execution>
