Replaced com.azure in a bunch of places that were breaking the build, checks and tests.

--- a/sdk/typespec-core/typespec-core/src/main/resources/META-INF/native-image/com.azure/azure-core/native-image.properties
+++ b/sdk/typespec-core/typespec-core/src/main/resources/META-INF/native-image/com.azure/azure-core/native-image.properties
@@ -17,15 +17,15 @@ Args=\
                              org.slf4j.MDC,\
                              org.slf4j.LoggerFactory,\
                              org.slf4j.impl.StaticLoggerBinder,\
-                             com.azure.core.util.logging.LogLevel,\
-                             com.azure.core.implementation.logging.DefaultLogger,\
-                             com.azure.core.test.TestBase,\
-                             com.azure.core.util.Configuration,\
-                             com.azure.core.implementation.util.EnvironmentConfiguration,\
-                             com.azure.core.implementation.util.EnvironmentConfiguration$EnvironmentVariablesConfigurationSource,\
-                             com.azure.core.util.CoreUtils,\
-                             com.azure.core.util.NoopConfiguration,\
-                             com.azure.core.util.logging.LoggingEventBuilder,\
+                             com.typespec.core.util.logging.LogLevel,\
+                             com.typespec.core.implementation.logging.DefaultLogger,\
+                             com.typespec.core.test.TestBase,\
+                             com.typespec.core.util.Configuration,\
+                             com.typespec.core.implementation.util.EnvironmentConfiguration,\
+                             com.typespec.core.implementation.util.EnvironmentConfiguration$EnvironmentVariablesConfigurationSource,\
+                             com.typespec.core.util.CoreUtils,\
+                             com.typespec.core.util.NoopConfiguration,\
+                             com.typespec.core.util.logging.LoggingEventBuilder,\
                              com.fasterxml.jackson.core.Base64Variants,\
                              com.fasterxml.jackson.core.JsonFactory,\
                              com.fasterxml.jackson.core.io.CharTypes,\
