--- a/sdk/typespec-core/typespec-core/src/main/resources/META-INF/native-image/com.azure/azure-core/reflect-config.json
+++ b/sdk/typespec-core/typespec-core/src/main/resources/META-INF/native-image/com.azure/azure-core/reflect-config.json
@@ -1,50 +1,50 @@
 [
   {
-    "name":"com.azure.core.util.logging.ClientLogger",
+    "name":"com.typespec.core.util.logging.ClientLogger",
     "allDeclaredFields":true,
     "queryAllDeclaredMethods":true,
     "queryAllDeclaredConstructors":true
   },
   {
-    "name":"com.azure.core.http.HttpHeaderName",
+    "name":"com.typespec.core.http.HttpHeaderName",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
     "allPublicMethods": true
   },
   {
-    "name":"com.azure.core.util.polling.LongRunningOperationStatus",
+    "name":"com.typespec.core.util.polling.LongRunningOperationStatus",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
     "allPublicMethods": true
   },
   {
-    "name":"com.azure.core.util.ExpandableStringEnum",
+    "name":"com.typespec.core.util.ExpandableStringEnum",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
     "allPublicMethods": true
   },
   {
-    "name":"com.azure.core.util.CoreUtils"
+    "name":"com.typespec.core.util.CoreUtils"
   },
   {
-    "name":"com.azure.core.util.Base64Url",
+    "name":"com.typespec.core.util.Base64Url",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
     "allPublicMethods": true
   },
   {
-    "name":"com.azure.core.util.DateTimeRfc1123",
+    "name":"com.typespec.core.util.DateTimeRfc1123",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
     "allPublicMethods": true
   },
   {
-    "name":"com.azure.core.http.rest.ResponseBase",
+    "name":"com.typespec.core.http.rest.ResponseBase",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
