--- a/sdk/typespec-core/typespec-core/pom.xml
+++ b/sdk/typespec-core/typespec-core/pom.xml
@@ -92,7 +92,7 @@
     <dependency>
       <groupId>com.typespec</groupId>
       <artifactId>typespec-json</artifactId>
-      <version>1.0.0</version> <!-- {x-version-update;com.typespec:typespec-json;dependency} -->
+      <version>1.0.0</version> <!-- {x-version-update;com.typespec:typespec-json;current} -->
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -139,7 +139,7 @@
     <dependency>
       <groupId>com.typespec</groupId>
       <artifactId>typespec-json</artifactId>
-      <version>1.0.0</version> <!-- {x-version-update;com.typespec:typespec-json;dependency} -->
+      <version>1.0.0</version> <!-- {x-version-update;com.typespec:typespec-json;current} -->
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -227,7 +227,7 @@
             <bannedDependencies>
               <includes>
                 <include>io.projectreactor:reactor-core:[3.4.31]</include> <!-- {x-include-update;io.projectreactor:reactor-core;external_dependency} -->
-                <include>com.typespec:typespec-json:[1.0.0]</include> <!-- {x-include-update;com.typespec:typespec-json;dependency} -->
+                <include>com.typespec:typespec-json:[1.0.0]</include> <!-- {x-include-update;com.typespec:typespec-json;current} -->
                 <include>com.fasterxml.jackson.core:jackson-annotations:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.core:jackson-annotations;external_dependency} -->
                 <include>com.fasterxml.jackson.core:jackson-core:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.core:jackson-core;external_dependency} -->
                 <include>com.fasterxml.jackson.core:jackson-databind:[2.13.5]</include> <!-- {x-include-update;com.fasterxml.jackson.core:jackson-databind;external_dependency} -->
