--- a/sdk/resourcemanager/azure-resourcemanager-cdn/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager-cdn/pom.xml
@@ -45,6 +45,7 @@
 
       --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
     </javaModulesSurefireArgLine>
+    <revapi.skip>true</revapi.skip>
   </properties>
 
   <developers>
