--- a/sdk/generic-sdk-core/generic-core/pom.xml
+++ b/sdk/generic-sdk-core/generic-core/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.azure</groupId>
     <artifactId>azure-client-sdk-parent</artifactId>
     <version>1.7.0</version> <!-- {x-version-update;com.azure:azure-client-sdk-parent;current} -->
-    <relativePath>../parents/azure-client-sdk-parent/pom.xml</relativePath>
+    <relativePath>../../parents/azure-client-sdk-parent/pom.xml</relativePath>
   </parent>
 
   <groupId>com.generic</groupId>
