--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -85,7 +85,7 @@
 /sdk/communication/azure-communication-rooms/       @minnieliu @paolamvhz @alexokun @Mrayyan @shwali-msft @allchiang-msft @mikehang-msft
 
 # PRLabel: %Container Registry
-/sdk/containerregistry/                              @lmolkova @alzimmermsft
+/sdk/containerregistry/                              @lmolkova @alzimmermsft @Azure/azsdk-acr
 
 # PRLabel: %Azure.Core
 /sdk/core/                                           @alzimmermsft @srnagar @anuchandy @lmolkova @vcolin7 @mssfang @jonathangiles @billwert
@@ -141,7 +141,7 @@
 /sdk/identity/azure-identity-extensions/             @backwind1233 @chenrujun @hui1110 @netyyyy @saragluna @stliu @yiliuTo @moarychan @fangjian0423
 
 # PRLabel: %KeyVault
-/sdk/keyvault/                                       @vcolin7 @g2vinay @samvaity
+/sdk/keyvault/                                       @vcolin7 @g2vinay @samvaity @Azure/azsdk-keyvault
 # PRLabel: %azure-spring
 /sdk/keyvault/azure-security-keyvault-jca/           @backwind1233 @chenrujun @hui1110 @netyyyy @saragluna @stliu @yiliuTo @moarychan @fangjian0423
 
@@ -167,7 +167,7 @@
 /sdk/schemaregistry/                                 @conniey @sjkwak @srnagar
 
 # PRLabel: %Search
-/sdk/search/                                         @alzimmermsft @jairmyree
+/sdk/search/                                         @alzimmermsft @jairmyree @Azure/azsdk-search
 
 # PRLabel: %Service Bus
 /sdk/servicebus/                                     @anuchandy @conniey @lmolkova
