--- a/sdk/search/tests.yml
+++ b/sdk/search/tests.yml
@@ -12,7 +12,7 @@ stages:
       CloudConfig:
         Preview:
           SubscriptionConfiguration: $(sub-config-azure-cloud-test-resources-preview)
-          Location: 'westcentralus'
+          Location: 'eastus2euap'
         UsGov:
           SubscriptionConfiguration: $(sub-config-gov-test-resources)
         China:
