--- a/sdk/communication/azure-communication-callautomation/pom.xml
+++ b/sdk/communication/azure-communication-callautomation/pom.xml
@@ -158,6 +158,9 @@
           <includes>
             <include>com/azure/communication/callautomation/*.class</include>
           </includes>
+          <excludes>
+            <exclude>com/azure/communication/callautomation/CustomBearerTokenAuthenticationPolicy.class</exclude>
+          </excludes>
         </configuration>
         <executions>
           <execution>
