--- a/sdk/generic-sdk-core/generic-core/src/main/resources/META-INF.native-image.com.generic.generic-core/reflect-config.json
+++ b/sdk/generic-sdk-core/generic-core/src/main/resources/META-INF.native-image.com.generic.generic-core/reflect-config.json
@@ -1,29 +1,29 @@
 [
   {
-    "name":"com.azure.core.util.logging.ClientLogger",
+    "name":"com.generic.core.util.logging.ClientLogger",
     "allDeclaredFields":true,
     "queryAllDeclaredMethods":true,
     "queryAllDeclaredConstructors":true
   },
   {
-    "name":"com.azure.core.http.HttpHeaderName",
+    "name":"com.generic.core.http.HttpHeaderName",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
     "allPublicMethods": true
   }
   {
-    "name":"com.azure.core.util.ExpandableStringEnum",
+    "name":"com.generic.core.util.ExpandableStringEnum",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
     "allPublicMethods": true
   },
   {
-    "name":"com.azure.core.util.CoreUtils"
+    "name":"com.generic.core.util.CoreUtils"
   },
   {
-    "name":"com.azure.core.http.rest.ResponseBase",
+    "name":"com.generic.core.http.rest.ResponseBase",
     "allDeclaredConstructors": true,
     "allPublicConstructors": true,
     "allDeclaredMethods": true,
