Repackage policy modules, Cleanup configuration properties, Core Utils, Client Logger methods, sync suffix, API view comments

--- a/sdk/generic-sdk-core/generic-core/pom.xml
+++ b/sdk/generic-sdk-core/generic-core/pom.xml
@@ -17,8 +17,8 @@
   <packaging>jar</packaging>
   <version>1.0.0</version> <!-- {x-version-update;com.generic:generic-core;current} -->
 
-  <name>Java Core Library</name>
-  <description>This library contains core types for Java client libraries that access web services.</description>
+  <name>Java Core Library for building client libraries for accessing web services.</name>
+  <description>This library contains core types for building Java client libraries for accessing web services.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
   <licenses>
