--- a/sdk/spring/spring-cloud-azure-starter-monitor-test/pom.xml
+++ b/sdk/spring/spring-cloud-azure-starter-monitor-test/pom.xml
@@ -31,14 +31,14 @@
       <dependency>
         <groupId>io.opentelemetry</groupId>
         <artifactId>opentelemetry-bom</artifactId>
-        <version>1.31.0</version> <!-- {x-version-update;io.opentelemetry:opentelemetry-bom;current|dependency|external_dependency<select one>} -->
+        <version>1.31.0</version> <!-- {x-version-update;io.opentelemetry:opentelemetry-bom;external_dependency} -->
         <type>pom</type>
         <scope>import</scope>
       </dependency>
       <dependency>
         <groupId>io.opentelemetry.instrumentation</groupId>
         <artifactId>opentelemetry-instrumentation-bom-alpha</artifactId>
-        <version>1.31.0-alpha</version> <!-- {x-version-update;io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha;current|dependency|external_dependency<select one>} -->
+        <version>1.31.0-alpha</version> <!-- {x-version-update;io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha;external_dependency} -->
         <type>pom</type>
         <scope>import</scope>
       </dependency>
