--- a/eng/pipelines/patch-release.yml
+++ b/eng/pipelines/patch-release.yml
@@ -112,3 +112,7 @@ extends:
       groupId: com.azure
       safeName: azureidentityextensions
       ServiceDirectory: identity
+    - name: azure-communication-callautomation
+      groupId: com.azure
+      safeName: azurecommunicationcallautomation
+      ServiceDirectory: communication
