--- a/sdk/storagemover/azure-resourcemanager-storagemover/pom.xml
+++ b/sdk/storagemover/azure-resourcemanager-storagemover/pom.xml
@@ -14,11 +14,11 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-storagemover</artifactId>
-  <version>1.1.0-beta.2</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-storagemover;current} -->
+  <version>1.1.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-storagemover;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for StorageMover Management</name>
-  <description>This package contains Microsoft Azure SDK for StorageMover Management SDK. For documentation on how to use this package, please see https://aka.ms/azsdk/java/mgmt. The Azure Storage Mover REST API. Package tag package-preview-2023-07.</description>
+  <description>This package contains Microsoft Azure SDK for StorageMover Management SDK. For documentation on how to use this package, please see https://aka.ms/azsdk/java/mgmt. The Azure Storage Mover REST API. Package tag package-2023-10.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
   <licenses>
@@ -45,7 +45,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <jacoco.min.linecoverage>0</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0</jacoco.min.branchcoverage>
-    <revapi.skip>true</revapi.skip>
   </properties>
   <dependencies>
     <dependency>
