--- a/sdk/datadog/azure-resourcemanager-datadog/pom.xml
+++ b/sdk/datadog/azure-resourcemanager-datadog/pom.xml
@@ -14,7 +14,7 @@
 
   <groupId>com.azure.resourcemanager</groupId>
   <artifactId>azure-resourcemanager-datadog</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-datadog;current} -->
+  <version>1.1.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-datadog;current} -->
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for MicrosoftDatadog Management</name>
